# create_youtube

./: .gitignore  AGENTS.md
backend/: .env.example  CLAUDE.md  README.md  pyproject.toml
backend/data/: sample_phrases.csv
backend/docs/: pipeline_flow.md  usage_en.md  usage_ja.md
backend/src/: app.py  job_store.py  phrase_db.py  phrase_generator.py  phrase_image_generator.py  tts_elevenlabs.py  video_pipeline.py
backend/static/: index.html
